--- a/Vass_2/config.ui
+++ b/Vass_2/config.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>570</height>
+    <width>659</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>-1</x>
-     <y>-1</y>
+     <x>10</x>
+     <y>0</y>
      <width>601</width>
      <height>511</height>
     </rect>
@@ -25,63 +25,8 @@
    <layout class="QVBoxLayout" name="mainLay">
     <item>
      <widget class="QTabWidget" name="tabWidget">
-      <property name="styleSheet">
-       <string notr="true">QTabWidget::pane { /* The tab widget frame */
-    border-top: 2px solid #C2C7CB;
-}
-
-QTabWidget::tab-bar {
-    left: 5px; /* move to the right by 5px */
-}
-
-/* Style the tab using the tab sub-control. Note that
-    it reads QTabBar _not_ QTabWidget */
-QTabBar::tab {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
-    border: 2px solid #C4C4C3;
-    border-bottom-color: #C2C7CB; /* same as the pane color */
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    min-width: 8ex;
-    padding: 10px;
-
-}
-
-QTabBar::tab:selected, QTabBar::tab:hover {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                stop: 0 #fafafa, stop: 0.4 #f4f4f4,
-                                stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
-}
-
-QTabBar::tab:selected {
-    border-color: #9B9B9B;
-    border-bottom-color: #C2C7CB; /* same as pane color */
-}
-
-QTabBar::tab:!selected {
-    margin-top: 2px; /* make non-selected tabs look smaller */
-}
-
-/* make use of negative margins for overlapping tabs */
-QTabBar::tab:selected {
-    /* expand/overlap to the left and right by 4px */
-    margin-left: -4px;
-    margin-right: -4px;
-}
-
-QTabBar::tab:first:selected {
-    margin-left: 0; /* the first selected tab has nothing to overlap with on the left */
-}
-
-QTabBar::tab:last:selected {
-    margin-right: 0; /* the last selected tab has nothing to overlap with on the right */
-}
-
-QTabBar::tab:only-one {
-    margin: 0; /* if there is only one tab, we don't want overlapping margins */
-}</string>
+      <property name="autoFillBackground">
+       <bool>true</bool>
       </property>
       <property name="currentIndex">
        <number>1</number>
@@ -142,6 +87,9 @@ QTabBar::tab:only-one {
            <height>51</height>
           </rect>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
+         </property>
          <property name="text">
           <string>PushButton</string>
          </property>
@@ -154,6 +102,9 @@ QTabBar::tab:only-one {
            <width>211</width>
            <height>51</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
          </property>
          <property name="text">
           <string>PushButton</string>
@@ -168,6 +119,9 @@ QTabBar::tab:only-one {
            <height>51</height>
           </rect>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
+         </property>
          <property name="text">
           <string>PushButton</string>
          </property>
@@ -180,6 +134,9 @@ QTabBar::tab:only-one {
            <width>211</width>
            <height>51</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
          </property>
          <property name="text">
           <string>PushButton</string>
@@ -194,6 +151,9 @@ QTabBar::tab:only-one {
            <height>51</height>
           </rect>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
+         </property>
          <property name="text">
           <string>PushButton</string>
          </property>
@@ -206,6 +166,9 @@ QTabBar::tab:only-one {
            <width>211</width>
            <height>51</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
          </property>
          <property name="text">
           <string>PushButton</string>
@@ -220,6 +183,9 @@ QTabBar::tab:only-one {
            <height>51</height>
           </rect>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
+         </property>
          <property name="text">
           <string>PushButton</string>
          </property>
@@ -232,6 +198,9 @@ QTabBar::tab:only-one {
            <width>211</width>
            <height>51</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{text-align:left;}</string>
          </property>
          <property name="text">
           <string>PushButton</string>
